--- a/ProjetFinalApplication/app/src/main/res/values/strings.xml
+++ b/ProjetFinalApplication/app/src/main/res/values/strings.xml
@@ -31,4 +31,7 @@
     <string name="example_time">10:15</string>
     <string name="country">Région et pays</string>
     <string name="welcome">Welcome</string>
+    <string name="canalId">CanalID</string>
+    <string name="canalTitle">CanalTitle</string>
+    <string name="canalDesc">Test du canal</string>
 </resources>
