--- a/ProjetFinalApplication/app/src/main/res/values/strings.xml
+++ b/ProjetFinalApplication/app/src/main/res/values/strings.xml
@@ -37,4 +37,21 @@
     <string name="call">Téléphoner</string>
     <string name="eat">Manger</string>
     <string name="hint_apps">Hint apps</string>
+    <string name="settings">settings</string>
+    <string name="text_password_config">Entrer le mot de passe administrateur</string>
+    <string name="timeParent">Changer l\'intervalle de temps entre chaque prise de données</string>
+    <string name="timeChild">Changer la durée de la prise de données</string>
+    <string-array name="timeParent">
+        <item>1h</item>
+        <item>3h</item>
+        <item>5h</item>
+        <item>7h</item>
+        <item>10h</item>
+    </string-array>
+    <string-array name="timeChild">
+        <item>10s</item>
+        <item>30s</item>
+        <item>45s</item>
+        <item>60s</item>
+    </string-array>
 </resources>
